# beman

./: .clang-format  .codespellrc  .git-blame-ignore-revs  .markdownlint.yaml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.txt  README.md  libraries.json
.github/: CODEOWNERS
.github/workflows/: pre-commit.yml
conan/: README.md
conan/recipes/beman/: config.yml
conan/recipes/beman/all/: CMakeLists.txt  conanfile.py
conan/recipes/beman/all/test_package/: CMakeLists.txt  CMakeUserPresets.json  conanfile.py
conan/recipes/beman/all/test_package/src/beman/: integration_test.cpp
conan/recipes/example/: config.yml
conan/recipes/example/all/: conandata.yml  conanfile.py
conan/recipes/example/all/test_package/: CMakeLists.txt  conanfile.py
conan/recipes/example/all/test_package/src/: example.cpp
conan/recipes/scn/: config.yml
conan/recipes/scn/all/: conandata.yml  conanfile.py
conan/recipes/scn/all/test_package/: CMakeLists.txt  conanfile.py
conan/recipes/scn/all/test_package/src/: example.cpp
docs/: BEMAN_LIBRARY_MATURITY_MODEL.md  BEMAN_LIBRAY_MATURITY_MODEL.md  BEMAN_PROCESS.md  BEMAN_STANDARD.md  CODE_OF_CONDUCT.md  FAQ.md  GOVERNANCE.md  MISSION_STATEMENT.md  README.md  beman-standard.md  governance.md  missionstatement.md
example/: CMakeLists.txt  beman_example.cpp
presentations/: beman_overview_wg21_202406.org
test/: CMakeLists.txt
tests/: CMakeLists.txt  beman_example.cpp
